--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<link rel="stylesheet" href="/public/css/style.css" type="text/css" />
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/quotes.js"></script>
 		<title>Exhibit</title>
 	</head>
 
