--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,9 @@
 <h1>Exhibit</h1>
 
 <ul>
-  {{#each name}}
+  {{#each exhibit}}
   	<li>
+  		<p><span class="label">Title:</span> {{this.name}}</p>
   		<p><span class="label">Title:</span> {{this.title}}</p>
       	<p><span class="label">Description:</span> {{this.description}}</p>
       	<p><span class="label">Medium:</span> {{this.medium}}</p>
