twitter embed, audio player added, cleaned up UX, got rid of api routes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,27 +4,36 @@
     </a>
 </nav>
 
-<h1 class="text-center">{{title}}</h1>
+<h1 class="text-center my-2">{{title}}</h1>
 
 <div class="row">
-    <div class="col-sm-12 text-center">
-        <img id="centerImg" src="{{img}}" />
+    <div class="col-sm-6 mt-2">
+        <div class="row">
+            <img id="mainImg" src="{{img}}" />
+        </div>
+        <div class="row mt-2">
+            <h2 class="mx-auto">Audio of Artist Talking</h2>
+            <audio controls preload="metadata" class="mx-auto">
+                <source src="https://www.w3schools.com/html/horse.ogg" type="audio/ogg">
+            </audio>
+        </div>
+    </div>
+    <div class="col-sm-6 mt-2">
+        <div class="row">
+            <p>Created on {{created}} with {{medium}}</p>
+            <p>{{desc}}</p>
+        </div>
+        <div class="rowTweet">
+            {{!-- <div class="col-sm-12 mx-auto mt-2"> --}}
+                <a class="twitter-timeline" href="https://twitter.com/roberroberbill?ref_src=twsrc%5Etfw" width="500" height="300" border="1px solid black">Tweets by roberroberbill</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            {{!-- </div> --}}
+        </div>
     </div>
 </div>
-<h3 class="text-center">Tweets from NHMLA</h3>
-<div class="row">
-  <div class="col-sm-6 mx-auto card" id="twitterSpace">
-    
-  </div>
-</div>
-<div class="row">
-    <div class="col-sm-6 mx-auto mt-2 card" id="instafeed">
-        
+{{!-- <div class="row">
+    <div class="col-sm-6 mx-auto mt-2">
+        <a class="twitter-timeline" href="https://twitter.com/roberroberbill?ref_src=twsrc%5Etfw" width="400" height="400" border="1px solid black">Tweets by roberroberbill</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
-</div>
-<div class="row">
-    <div class="col-sm-12">
-        <p>Created on {{created}} with {{medium}}</p>
-        <p>{{desc}}</p>
-    </div>
-</div>
+</div> --}}
+
+
