--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,29 +1,49 @@
 html, body {
 	box-sizing: border-box;
-	/*overflow: hidden;*/
+	height: auto;
+	width: 100%;
+	background-color: #CFD2DF;
 }
 p {
 	padding: 0 2rem;
 }
-#profileImg {
-	float: left;
-	border-radius: 50%;
-	height: 50px;
-	width: 50px;
+#mainImg {
+	width: 100%;
+	height: 400px;
+	padding-left: 2rem;
 }
-.card {
-	background-color: lightgreen;
-	border-radius: 2em;
-	margin: 1em;
+.rowTweet {
+	padding-left: 1rem;
 }
-.navbar {
-	overflow: hidden;
+/* Can't get a border on the twitter widget
+The below is what I was trying */
+
+iframe#twitter-widget-0 {
+	border: 0.5px solid black;
 }
-.video {
-	height: 250px;
-	width: 280px;
+
+/* Audio Player */
+audio:hover, audio:focus, audio:active
+{
+-webkit-box-shadow: 15px 15px 20px rgba(0,0, 0, 0.4);
+-moz-box-shadow: 15px 15px 20px rgba(0,0, 0, 0.4);
+box-shadow: 15px 15px 20px rgba(0,0, 0, 0.4);
+-webkit-transform: scale(1.05);
+-moz-transform: scale(1.05);
+transform: scale(1.05);
 }
-#centerImg {
-	width: 300px;
-	height: 200px;
+
+
+audio
+{
+-webkit-transition:all 0.5s linear;
+-moz-transition:all 0.5s linear;
+-o-transition:all 0.5s linear;
+transition:all 0.5s linear;
+-moz-box-shadow: 2px 2px 4px 0px #006773;
+-webkit-box-shadow:  2px 2px 4px 0px #006773;
+box-shadow: 2px 2px 4px 0px #006773;
+-moz-border-radius:7px 7px 7px 7px ;
+-webkit-border-radius:7px 7px 7px 7px ;
+border-radius:7px 7px 7px 7px ;
 }
