--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,3 +47,28 @@ box-shadow: 2px 2px 4px 0px #006773;
 -webkit-border-radius:7px 7px 7px 7px ;
 border-radius:7px 7px 7px 7px ;
 }
+
+.cool-font {
+  font-family: Shrikhand, cursive;
+  font-size: 10px;
+  color: #1da1f2;
+}
+
+input,
+textarea {
+  margin: 10px;
+}
+
+.btn {
+  margin: 10px;
+  color: #1da1f2;
+  background-color: white;
+  border-color: #1da1f2;
+  border-style: solid;
+  border-width: 2px;
+}
+
+p {
+  margin: 0;
+  font-size: 10px;
+}
