--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,4 +36,23 @@
     </div>
 </div> --}}
 
+   <div class="container">
+
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <textarea class="form-control" rows="3" id="chat-box" placeholder="Enter feedback here!"></textarea>
+          <button id="chat-submit" class="btn btn-lg pull-right">submit!</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <h3>Feedback</h3>
+          <hr>
+          <div id="chat-area"></div>
+        </div>
+
+    </div>
+
+
 
