--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,18 +30,14 @@
         </div>
     </div>
 </div>
-{{!-- <div class="row">
-    <div class="col-sm-6 mx-auto mt-2">
-        <a class="twitter-timeline" href="https://twitter.com/roberroberbill?ref_src=twsrc%5Etfw" width="400" height="400" border="1px solid black">Tweets by roberroberbill</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-</div> --}}
+
 
    <div class="container">
 
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
-          <textarea class="form-control" rows="3" id="chat-box" placeholder="Enter feedback here!"></textarea>
-          <button id="chat-submit" class="btn btn-lg pull-right">submit!</button>
+          <textarea class="form-control" rows="3" id="feedback" placeholder="Enter feedback here!"></textarea>
+          <button id="feedback-submit" class="btn btn-lg pull-right">submit!</button>
         </div>
       </div>
 
@@ -49,10 +45,12 @@
         <div class="col-sm-8 col-sm-offset-2">
           <h3>Feedback</h3>
           <hr>
-          <div id="chat-area"></div>
+          <div id="feedback-area"></div>
         </div>
 
     </div>
+
+  <script type="text/javascript" src="javascript/feedback.js"></script>
 
 
 
