associations working, pulling two tables into handlebars views

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,14 +20,14 @@
                 <a class="twitter-timeline" href="https://twitter.com/roberroberbill?ref_src=twsrc%5Etfw" height="300" border="1px solid black">Tweets by roberroberbill</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
-            <div class="container ml-1">
+ <!--            <div class="container ml-1">
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2">
                         <textarea class="form-control" rows="3" id="chat-box" placeholder="Enter feedback here!"></textarea>
                         <button id="chat-submit" class="btn btn-lg pull-right">submit!</button>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
