--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
     <div class="row mr-0 pr-0 mb-0 pb-0">
         <div class="col-sm-6 mt-2 text-center">
             <img id="mainImg" src="{{img}}" />
-            <h2 class="mx-auto text-center mt-3">Audio of Artist Talking</h2>
+            <h2 class="mx-auto text-center mt-3">{{name}} interview with KFMD</h2>
             <audio controls preload="metadata" class="mx-auto">
                 <source src="https://www.w3schools.com/html/horse.ogg" type="audio/ogg">
             </audio>
@@ -20,14 +20,6 @@
                 <a class="twitter-timeline" href="https://twitter.com/roberroberbill?ref_src=twsrc%5Etfw" height="300" border="1px solid black">Tweets by roberroberbill</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
- <!--            <div class="container ml-1">
-                <div class="row">
-                    <div class="col-sm-8 col-sm-offset-2">
-                        <textarea class="form-control" rows="3" id="chat-box" placeholder="Enter feedback here!"></textarea>
-                        <button id="chat-submit" class="btn btn-lg pull-right">submit!</button>
-                    </div>
-                </div>
-            </div> -->
         </div>
     </div>
 </div>
