--- a/views/manageExhibitions.handlebars
+++ b/views/manageExhibitions.handlebars
@@ -6,10 +6,12 @@
 <div class="container">
     <div class="row mt-5">
         <div class="col-md-2 col-sm-2">
-            <a class="btn btn-default" href="/blog">Go to Blog</a>
+            {{!-- page to view everything in the db --}}
+            <a class="btn btn-default" href="/blog">View your Database</a>
         </div>
         <div class="col-md-2 col-sm-2">
-            <a class="btn btn-default" href="/cms">New Post</a>
+            {{!-- for something else --}}
+            <a class="btn btn-default" href="/cms">Something</a>
         </div>
     </div>
     <div class="row">
