--- a/views/viewArtistContent.handlebars
+++ b/views/viewArtistContent.handlebars
@@ -25,49 +25,47 @@
 	    </div>
 	    <!-- Form for updating -->
 	    <div class="col-md-4">
-	        <div class="my-2" id="artistAddContent">
-	            <form>
+	        <div class="my-2">
+	            <form id="artistAddContent">
 	                <div class="form-row">
 	                    <div class="form-group col-md-6">
-	                        <label for="inputEmail4">Email</label>
-	                        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+	                        <label for="routeName">Route Name (URL)</label>
+	                        <input type="text" class="form-control" id="routeName" placeholder="No spaces allowed">
 	                    </div>
 	                    <div class="form-group col-md-6">
-	                        <label for="inputPassword4">Password</label>
-	                        <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+	                        <label for="date">Date Created</label>
+	                        <input type="date" class="form-control" id="date">
 	                    </div>
 	                </div>
 	                <div class="form-group">
-	                    <label for="inputAddress">Address</label>
-	                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+	                    <label for="pieceTitle">Title of the Piece</label>
+	                    <input type="text" class="form-control" id="pieceTitle" placeholder="Title">
 	                </div>
 	                <div class="form-group">
-	                    <label for="inputAddress2">Address 2</label>
-	                    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+	                    <label for="desc">Description</label>
+	                    <textarea type="text" class="form-control" id="desc" rows='3' placeholder="..."></textarea>
 	                </div>
 	                <div class="form-row">
 	                    <div class="form-group col-md-6">
-	                        <label for="inputCity">City</label>
-	                        <input type="text" class="form-control" id="inputCity">
+	                        <label for="medium">Medium</label>
+	                        <input type="text" class="form-control" id="medium">
 	                    </div>
 	                    <div class="form-group col-md-4">
-	                        <label for="inputState">State</label>
-	                        <select id="inputState" class="form-control">
-	                            <option selected>Choose...</option>
-	                            <option>...</option>
-	                        </select>
-	                    </div>
-	                    <div class="form-group col-md-2">
-	                        <label for="inputZip">Zip</label>
-	                        <input type="text" class="form-control" id="inputZip">
+							<label for="beacon">Beacon ID</label>
+	                        <input type="text" class="form-control" id="beacon">
 	                    </div>
 	                </div>
+					<div class="form-group">
+	                    <label for="googleCLoudImg">Img Link</label>
+	                    <input type="url" class="form-control" id="googleCloudImg">
+	                </div>
 	                <div class="form-group">
-	                    <div class="form-check">
-	                        <label class="form-check-label">
-	                            <input class="form-check-input" type="checkbox"> Check me out
-	                        </label>
-	                    </div>
+	                    <label for="googleCLoudVideo">Video Link</label>
+	                    <input type="url" class="form-control" id="googleCloudVideo">
+	                </div>
+	                <div class="form-group">
+	                    <label for="googleCLoudAudio">Audio Link</label>
+	                    <input type="url" class="form-control" id="googleCloudAudio">
 	                </div>
 	                <button type="submit" class="btn btn-primary">Sign in</button>
 	            </form>
