--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,8 +17,8 @@
             <p>Created on {{created}} with {{medium}}</p>
             <p>{{desc}}</p>
             <div class="rowTweet mt-2">
-                <a class="twitter-timeline" href="https://twitter.com/roberroberbill?ref_src=twsrc%5Etfw" height="300" border="1px solid black">Tweets by roberroberbill</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <a class="twitter-timeline"  href="https://twitter.com/hashtag/{{route}}" data-widget-id='{{twitter}}' height="300">#{{route}} Tweets</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
             </div>
         </div>
     </div>
