--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
             <p>Created on {{created}} with {{medium}}</p>
             <p>{{desc}}</p>
             <div class="rowTweet mt-2">
-                <a class="twitter-timeline"  href="https://twitter.com/hashtag/{{route}}" data-widget-id='{{twitter}}' height="300">#{{route}} Tweets</a>
+                {{{twitter}}}
                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
             </div>
         </div>
