dynamic working and adding an artwork

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">
-    <img src="images/Parthenon-128.png" width="30" height="30" class="d-inline-block align-top" alt=""> The {{name}} Exhibit
+    <img src="../images/Parthenon-128.png" width="30" height="30" class="d-inline-block align-top" alt=""> The {{name}} Exhibit
     </a>
 </nav>
 <h1 class="text-center my-2">{{title}}</h1>
