--- a/views/viewArtistContent.handlebars
+++ b/views/viewArtistContent.handlebars
@@ -55,6 +55,10 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label for="twitterEmbedNumber">Twitter Embed Number</label>
+                    <input type="text" class="form-control" id="twitterEmbedNumber">
+                </div>
+                <div class="form-group">
                     <label for="googleCLoudImg">Img Link</label>
                     <input type="url" class="form-control" id="googleCloudImg">
                 </div>
