edit working, needs new style, input validation

--- a/views/manageExhibitions.handlebars
+++ b/views/manageExhibitions.handlebars
@@ -43,7 +43,7 @@
                     		</td>
                     		<td>
                     			{{!-- need a route for updating --}}
-                    			<a href="cms?artist_id=">Add a New Content for this Artist</a>
+                    			<a href="artistContent/{{{id}}}">Add a New Content for this Artist</a>
                     		</td>
                     		<td>
                     			<a href="#">Delete Artist from Database</a>
