--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,12 +98,12 @@ a:hover {
 
 html,
 body {
-  height: 100%;
+  /*height: 100%;*/
   background-color: #333;
 }
 body {
   color: #fff;
-  text-align: center;
+  /*text-align: center;*/
   text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
 }
 
