trying new route for edit

--- a/views/viewArtistContent.handlebars
+++ b/views/viewArtistContent.handlebars
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row results mt-5">
         <!-- Artwork Results -->
-        <div class="col-sm-12 col-md-6 resultsField">
+        <div class="col-sm-12 col-md-12 col-lg-6 resultsField">
             {{#each pieces}}
             <div class='row editRow{{{id}}}'>
                 <div class='card w-100 mx-2 my-1 resultsUser' style='width: 20rem;'>
