--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,6 @@
 </head>
 <body>
 	{{{ body }}}
-	  <script type="text/javascript" src="./javascript/login.js"></script>
-	  <script type="text/javascript" src="./javascript/signup.js"></script>
+	  <script type="text/javascript" src="./javascript/feedback.js"></script>
 </body>
 </html>
