--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,54 +3,23 @@
     <img src="images/Parthenon-128.png" width="30" height="30" class="d-inline-block align-top" alt=""> The {{name}} Exhibit
     </a>
 </nav>
-
 <h1 class="text-center my-2">{{title}}</h1>
-
-<div class="row">
-    <div class="col-sm-6 mt-2">
-        <div class="row">
+<div class="container-fluid">
+    <div class="row mr-0 pr-0 mb-0 pb-0">
+        <div class="col-sm-6 mt-2 text-center">
             <img id="mainImg" src="{{img}}" />
-        </div>
-        <div class="row mt-2">
-            <h2 class="mx-auto">Audio of Artist Talking</h2>
+            <h2 class="mx-auto text-center mt-3">{{name}} interview with KFMD</h2>
             <audio controls preload="metadata" class="mx-auto">
                 <source src="https://www.w3schools.com/html/horse.ogg" type="audio/ogg">
             </audio>
         </div>
-    </div>
-    <div class="col-sm-6 mt-2">
-        <div class="row">
+        <div class="col-sm-6 pl-2 mt-2">
             <p>Created on {{created}} with {{medium}}</p>
             <p>{{desc}}</p>
-        </div>
-        <div class="rowTweet">
-            {{!-- <div class="col-sm-12 mx-auto mt-2"> --}}
-                <a class="twitter-timeline" href="https://twitter.com/roberroberbill?ref_src=twsrc%5Etfw" width="500" height="300" border="1px solid black">Tweets by roberroberbill</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            {{!-- </div> --}}
+            <div class="rowTweet mt-2">
+                <a class='twitter-timeline'  href='https://twitter.com/hashtag/mosswall' data-widget-id='{{{twitter}}}' height='300'>#mosswall Tweets</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+            </div>
         </div>
     </div>
 </div>
-
-
-   <div class="container">
-
-      <div class="row">
-        <div class="col-sm-8 col-sm-offset-2">
-          <textarea class="form-control" rows="3" id="feedback" placeholder="Enter feedback here!"></textarea>
-          <button id="feedback-submit" class="btn btn-lg pull-right">submit!</button>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-8 col-sm-offset-2">
-          <h3>Feedback</h3>
-          <hr>
-          <div id="feedback-area"></div>
-        </div>
-
-    </div>
-
-  <script type="text/javascript" src="javascript/feedback.js"></script>
-
-
-
