--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,7 @@
                 <source src="https://www.w3schools.com/html/horse.ogg" type="audio/ogg">
             </audio>
         </div>
-        <div class="col-md-6 pl-2 mt-2">
+        <div class="col-lg-6 pl-2 mt-2">
             <p>Created on {{created}} with {{medium}}</p>
             <p id="artworkDiscription">{{desc}}</p>
             <div class="rowTweet mt-2">
