--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,8 @@
 </nav>
 <h1 class="text-center my-2">{{title}}</h1>
 <div class="container-fluid">
-    <div class="row mr-0 pr-0 mb-0 pb-0">
+    <!-- <div class="row mr-0 pr-0 mb-0 pb-0"> -->
+        <div class="row">
         <div class="col-lg-6 mt-2 text-center">
             <img id="mainImg" src="{{img}}" />
             <h2 class="mx-auto text-center mt-3">{{name}} interview with KFMD</h2>
@@ -13,6 +14,8 @@
                 <source src="https://www.w3schools.com/html/horse.ogg" type="audio/ogg">
             </audio>
         </div>
+        </div>
+        <div class="row">
         <div class="col-lg-6 pl-2 mt-2">
             <p>Created on {{created}} with {{medium}}</p>
             <p id="artworkDiscription">{{desc}}</p>
@@ -21,5 +24,6 @@
                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
             </div>
         </div>
-    </div>
+        </div>
+    <!-- </div> -->
 </div>
