working edit page on separate html and db update need to work on delete for both artist and artwork

--- a/views/viewArtistContent.handlebars
+++ b/views/viewArtistContent.handlebars
@@ -12,7 +12,7 @@
                 <div class='card w-100 mx-2 my-1 resultsUser' style='width: 20rem;'>
                     <div class='card-body p-1'>
                         <img class='card-img-top profilePhoto mr-auto' src='{{imgURL}}' alt='' />
-                        <a class='btn edit' data-id='{{id}}' href="#">Edit</a>
+                        <a class='btn edit' data-id='{{id}}' href="../editArtistContent/{{{id}}}">Edit</a>
                         <h4 class='card-title artworkTitle'><a href="../artwork/{{{route}}}">{{title}}</a></h4>
                         <h6 class="artInfo">{{medium}}</h5>
 	                    <h6 class="artInfo created">{{created_date}}</h6>
