--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -12,7 +12,8 @@
       <div class="col-md-6 col-md-offset-3">
         <h2>Sign Up Form</h2>
         
-        <form class="form-group">      <!-- ROUTING POST HERE '/AUTH' -->
+
+      <form class="form" action="post" id="this-user">
           <div class="form-group">
             <label for="useremail">Email address</label>
             <input type="email" class="form-control" id="email-input" placeholder="Email">
@@ -27,6 +28,8 @@
           </div>
           <button type="submit" class="btn btn-default">Sign Up</button>
         </form>
+
+
         <br />
         <h4>Or log in <a href="/login">here</a></h4>
       </div>
