--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
       <div class="col-md-6 col-md-offset-3">
         <h2>Login Form</h2>
         
-        <form action="/login" method="post">      <!-- ROUTING POST HERE '/AUTH' -->
+        <form id="form">      <!-- ROUTING POST HERE '/AUTH' -->
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="email-input" placeholder="Email">
