--- a/views/editArtistContent.handlebars
+++ b/views/editArtistContent.handlebars
@@ -3,12 +3,14 @@
     <img src="../images/Parthenon-128.png" width="30" height="30" class="d-inline-block align-top" alt=""> Editing {{piece.Artist.name}}'s Content. Artwork ID: {{piece.id}}
     </a>
 </nav>
-<div class="jumbotron">
-    <div class="container">
+{{!-- <div class="jumbotron"> --}}
+    <div class="container mt-5">
         <div class="row mx-auto">
-            <form id="editArtistContent" class="p-2">
-                <h3 id="artistId">Artist ID: {{piece.Artist.id}}</h3>
-                <h3 id="artworkId">Artwork ID: {{piece.id}}</h3>
+            <form id="editArtistContent" class="p-4">
+                <div class="row">
+                    <h3 class="col-md-6" id="artistId">Artist ID: {{piece.Artist.id}}</h3>
+                    <h3 class="col-md-6" id="artworkId">Artwork ID: {{piece.id}}</h3>
+                </div>
                 <div class="form-group">
                     <label for="routeNameEdit">Route Name (URL)</label>
                     <div>
@@ -18,7 +20,7 @@
                 <div class="form-group">
                     <label for="dateEdit">Date Created</label>
                     <div>
-                        <input class="form-control" type="date" id="dateEdit" placeholder="No spaces allowed">
+                        <input class="form-control" type="date" id="dateEdit" value="{{{piece.created_date}}}">
                     </div>
                 </div>
                 <div class="form-group">
@@ -73,4 +75,4 @@
             </form>
         </div>
     </div>
-</div>
+{{!-- </div> --}}
