--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,10 +11,14 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h2>Login Form</h2>
-        
+
+      {{#if userId}}
+        Signed in as {{userId}}. <a href="/logout">Log Out</a>
+
+              
         <form id="form">      <!-- ROUTING POST HERE '/AUTH' -->
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
+            <label for="exampleInputEmail1">Email</label>
             <input type="email" class="form-control" id="email-input" placeholder="Email">
           </div>
           <div class="form-group">
@@ -24,7 +28,11 @@
           <button type="submit" class="btn btn-default">Login</button>
         </form>
         <br />
-        <p>Or sign up <a href="/signup">here</a></p>
+
+      {{else}}
+        <p> Or Sign Up <a href='/signup'>here</a></p>
+      {{/if}}
+
       </div>
     </div>
   </div>
