--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,7 +13,7 @@
         <h2>Sign Up Form</h2>
         
 
-      <form class="form" action="post" id="this-user">
+      <form class="form" id="signup">
           <div class="form-group">
             <label for="useremail">Email address</label>
             <input type="email" class="form-control" id="email-input" placeholder="Email">
