CRUD methods working across db.Artists and db.Artwork

--- a/views/manageExhibitions.handlebars
+++ b/views/manageExhibitions.handlebars
@@ -45,7 +45,7 @@
                     		</td>
                     		<td>
                                 {{!-- needs an on hover effect to show button status --}}
-                    			<a class="delete-artist" data-id="{{{id}}}">Delete Artist from Database</a>
+                    			<a class="delete-artist" data-id="{{{id}}}" href="">Delete Artist from Database (and all associated artwork)</a>
                     		</td>
                     	</tr>
                     	{{/each}}
