--- a/public/css/viewArtistContent.css
+++ b/public/css/viewArtistContent.css
@@ -13,17 +13,22 @@ html, body {
     border: 1px solid black;
     border-radius: 3px;
 }
-a:not([href]):not([tabindex]) {
+/*a:not([href]):not([tabindex]) {
     color: inherit;
     text-decoration: none;
-}
-
+}*/
 .edit {
     float: right;
     color: white !important;
     background-color: #eb2678;
     border-color: #eb2678;
-    /*font-family: 'Quicksand', sans-serif;*/
+    font-weight: bold;
+}
+.delete {
+    float: right;
+    color: white !important;
+    background-color: #CC2936;
+    border-color: #CC2936;
     font-weight: bold;
 }
 .artworkTitle {
