--- a/views/viewArtistContent.handlebars
+++ b/views/viewArtistContent.handlebars
@@ -4,17 +4,18 @@
     </a>
 </nav>
 <div class="container">
-    <div class="row results mt-5">
+    <div class="row mt-5">
         <!-- Artwork Results -->
-        <div class="col-sm-12 col-md-12 col-lg-6 resultsField">
+        <div class="col-md-6 resultsField">
             {{#each pieces}}
             <div class='row editRow{{{id}}}'>
                 <div class='card w-100 mx-2 my-1 resultsUser' style='width: 20rem;'>
-                    <div class='card-body p-1'>
+                    <div class='card-body p-1'> 
                         <img class='card-img-top profilePhoto mr-auto' src='{{imgURL}}' alt='' />
-                        <a class='btn edit' data-id='{{id}}' href="../editArtistContent/{{{id}}}">Edit</a>
+                        <a class="btn delete" data-id="{{id}}">Delete</a>
+                        <a class='btn edit mr-1' data-id='{{id}}' href="../editArtistContent/{{{id}}}">Edit</a>
                         <h4 class='card-title artworkTitle'><a href="../artwork/{{{route}}}">{{title}}</a></h4>
-                        <h6 class="artInfo">{{medium}}</h5>
+                        <h6 class="artInfo">{{medium}}</h6>
 	                    <h6 class="artInfo created">{{created_date}}</h6>
                         <h6 class='artInfo'>{{beaconId}}</h6>
                         <p class="artInfo">{{description}}</p>
@@ -24,7 +25,7 @@
             {{/each}}
         </div>
         <!-- Form for updating -->
-        <div class="col-sm-12 col-md-6 formField">
+        <div class="col-md-6 formField">
             <form id="artistAddContent" class="p-2">
                 <div class="form-row">
                     <div class="form-group col-md-6">
