--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,8 +12,8 @@
       <div class="col-md-6 col-md-offset-3">
         <h2>Login Form</h2>
 
-      {{#if userId}}
-        Signed in as {{userId}}. <a href="/logout">Log Out</a>
+      {{#if user.userId}}
+        Signed in as {{user.userId}}. <a href="/logout">Log Out</a>
 
               
         <form id="form">     
