--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,9 +9,9 @@
     <div class="row">
         <div class="col-sm-12 mt-2 text-center">
             <img id="mainImg" src="{{img}}" />
-            <h2 class="mx-auto text-center mt-3">{{name}} interview with KFMD</h2>
+            <h2 class="mx-auto text-center mt-3 text-white">{{name}} interview with KFMD</h2>
             <audio controls preload="metadata" class="mx-auto">
-                <source src="https://www.w3schools.com/html/horse.ogg" type="audio/ogg">
+                <source src="{{audio}}" type="audio/mp3">
             </audio>
         </div>
         <div class="col-sm-12">
