added login button

--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -8,7 +8,7 @@
         <div class="inner">
           <h3 class="masthead-brand">Physical Web Los Angeles Musuems</h3>
           <nav class="nav nav-masthead">
-            <a class="nav-link active" href="#">Home</a>
+            <a class="nav-link active" href="/login">Login</a>
             <a class="nav-link" href="#">Features</a>
             <a class="nav-link" href="#">Contact Us</a>
           </nav>
