--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -10,7 +10,7 @@
         <h2>Sign Up Form</h2>
         
 
-      <form class="form" id="signup">
+      <form class="form" method="post">
           <div class="form-group">
             <label for="useremail">Email address</label>
             <input type="email" class="form-control" id="email-input" placeholder="Email">
@@ -28,12 +28,10 @@
 
 
         <br />
-        <h4>Or log in <a href="/login">here</a></h4>
+        <p>Or log in <a href="/login">here</a></p>
       </div>
     </div>
   </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascript/signup.js"></script>
 
 
