--- a/views/manageExhibitions.handlebars
+++ b/views/manageExhibitions.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/settings">
     <img src="../images/Parthenon-128.png" width="30" height="30" class="d-inline-block align-top" alt=""> The Museum's Exhibition Management Page
     </a>
 </nav>
