--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -27,7 +27,12 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  /*background-color: #333;*/
+  background: url(https://storage.googleapis.com/physicalweb-museum/maxii.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 body {
   color: #fff;
