--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -12,8 +12,8 @@
                 </div>
             </header>
             <main role="main" class="inner cover">
-                <h1 class="cover-heading">Bring the offline, online</h1>
-                <p class="lead">Some stuff talk about what we can do... Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias aut temporibus velit ex quam voluptatibus neque voluptatem cupiditate unde deserunt sit, vel facere ut, nulla alias cumque! Quam, ipsam, excepturi.</p>
+                <h1 class="cover-heading">Bring the offline... online!</h1>
+                <p class="lead">Company specializing in bluetooth </p>
                 <p class="lead">
                     <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
                 </p>
