added return to settings buttons, css styling

--- a/views/editArtistContent.handlebars
+++ b/views/editArtistContent.handlebars
@@ -2,6 +2,7 @@
     <a class="navbar-brand" href="#">
     <img src="../images/Parthenon-128.png" width="30" height="30" class="d-inline-block align-top" alt=""> Editing {{piece.Artist.name}}'s Content. Artwork ID: {{piece.id}}
     </a>
+    <a class="nav-link btn btn-outline-primary" href="/artistContent/{{{piece.Artist.id}}}">Return to View Artist Content</a>
 </nav>
 {{!-- <div class="jumbotron"> --}}
     <div class="container mt-5">
