--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -11,11 +11,11 @@
                     </nav>
                 </div>
             </header>
-            <main role="main" class="inner cover">
-                <h1 class="cover-heading">Bring the offline... online!</h1>
-                <p class="lead">Company specializing in bluetooth </p>
+            <main role="main" class="inner cover opaque">
+                <h1 class="cover-heading pt-3">Bring the offline... online!</h1>
+                <p class="lead">Company specializing in bluetooth beacon solutions. Our primary projects concerns are helping museums create a more engaging experience for their clients by harnessing beacon technology and the physical web to help bring their art pieces to life. We are happy to discuss any other options or ideas you may have concerning beacon technology and what it can do for your company</p>
                 <p class="lead">
-                    <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+                    <a href="#" class="btn btn-lg btn-secondary mb-3">Learn more</a>
                 </p>
             </main>
         </div>
